<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePageActivity">

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="580dp"
        android:background="FFF"
        tools:layout_editor_absoluteY="151dp" />

    <TextView
        android:id="@+id/textLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewLanguage"
        android:textColor="#000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/textArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewArea"
        android:textColor="#000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="231dp" />

    <TextView
        android:id="@+id/textViewDayOfTheWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDayOfTheWeek"
        android:textColor="#000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="274dp" />

    <TableLayout
        android:layout_width="356dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:stretchColumns="0,1,2,3,4,5,6"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="320dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/textViewMon"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/textViewTue"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/textViewWed"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/textViewThu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="4"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/textViewFri"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="5"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/textViewSat"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="6"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/textViewSun"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="76dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:id="@+id/textViewWeek0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewWeek1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=" Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewWeek2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=" Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewWeek3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=" Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewWeek4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="4"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=" Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewWeek5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="5"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=" Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewWeek6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="6"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text=" Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorMyPage"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />
    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewUser"
                    android:layout_width="79dp"
                    android:layout_height="79dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/profile"></ImageView>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:textColor="#000"
            android:textSize="15sp"
            android:text="@string/textViewUserNameProfile" />
    </LinearLayout>
    <RadioButton
        android:id="@+id/radioButtonBusy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioButtonBusy"
        android:textColor="@color/colorRadioButtonBusy"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="19dp" />
    <RadioButton
        android:id="@+id/radioButtonFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:checked="true"
        android:text="@string/radioButtonFree"
        android:visibility="visible"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="19dp" />
    <Button
        android:id="@+id/buttonEditProfile"
        android:layout_width="172dp"
        android:layout_height="30dp"
        android:background="@drawable/border1"
        android:text="@string/buttonEditProfile"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="134dp" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewPr"
        android:textColor="#000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="443dp" />

    <EditText
        android:id="@+id/editTextPr"
        android:layout_width="360dp"
        android:layout_height="157dp"
        android:background="@drawable/border"
        android:inputType="textMultiLine"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="478dp" />

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/textViewArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="231dp" />

</androidx.constraintlayout.widget.ConstraintLayout>