<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMyPage"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="137dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:text="TripWiz"
        android:textColor="#000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMailAddress"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="メールアドレス"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="パスワード"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMailAddress" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="131dp"
        android:layout_height="61dp"
        android:background="#FF9800"
        android:text="SIGNUP"
        android:textColor="#000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:id="@+id/textViewMailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMailAddress"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewName"
        app:layout_constraintEnd_toStartOf="@+id/editTextMailAddress"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <TextView
        android:id="@+id/textViewMailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewPw"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="197dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/textViewName"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewGender"
        app:layout_constraintEnd_toStartOf="@+id/editTextName"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="36dp"
        android:text="@string/textViewGender"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/radioButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/textViewNationality"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewBirthday"
        android:textColor="#000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="462dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:checked="true"
        android:text="@string/radioButtonMale"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/radioButtonFeMale"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="325dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="370dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewYear"
        android:textColor="#000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="462dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/textViewMonth"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        tools:layout_editor_absoluteX="274dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/textViewDay"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        tools:layout_editor_absoluteX="353dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintStart_toEndOf="@+id/spinner2" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        tools:layout_editor_absoluteX="313dp" />


</androidx.constraintlayout.widget.ConstraintLayout>